# terminal-ui

./: CMakeLists.txt  README.md  terminal-ui.c
comm/: dbus_comm.c  fs_comm.c  proc_comm.c
conf/: com.TerminalUI.Service.conf
include/: audio.h  cmd_payload.h  comm.h  dbus_comm.h  fonts.h  gmisc.h  imu.h  layer.h  layers.h  list.h  log.h  main.h  screens.h  style.h  sys_comm.h  task.h  task_handler.h  terminal-ui.h  ui_comm.h  workqueue.h
include/comm/: cmd_payload.h  dbus_comm.h  f_comm.h  sys_comm.h
include/comm/net/: network.h
include/sched/: task.h  workqueue.h
include/ui/: color_palette_256.h  comps.h  flex.h  fonts.h  gmisc.h  grid.h  layout.h  pages.h  screen.h  screens.h  style.h  ui.h  ui_core.h  ui_plat.h  widget.h  windows.h
include/ui/widget/: menu.h
include/ux/: ux.h
src/: main.c  task_handler.c  terminal-ui.c
src/audio/: audio_effect.c  audio_mgr.c
src/audio/sounds/: system_sounds.c
src/comm/: cmd_payload.c  dbus_comm.c  fs_comm.c  internal_comm.c  proc_comm.c
src/core/: task_exec.c  ui_obj_mgr.c  ui_task_executor.c
src/core/task/: task_executor.c  task_scheduler.c  workqueue.c  workqueue_handler.c
src/core/ui/: align.c  border.c  creator.c  dynamic_creator.c  layout.c  obj.c  obj_list.c  padding.c  rotation.c  size.c
src/core/ui/layouts/: flex.c  grid.c
src/core/work/: workqueue.c  workqueue_handler.c
src/fonts/: terminal_icons_20.c  terminal_icons_32.c  terminal_icons_48.c
src/gmisc/: clock.c  gmisc.c  home_indicator.c  keyboard.c  notification.c  plat.c  status_bar.c  task_bar.c
src/gmisc/hardware/: backlight.c
src/hardware/: backlight.c  vibrator.c
src/hardware/imu/: imu.c  kalman.h
src/helper/: events.c  task.c  workqueue.c
src/layers/: active.c  bottom.c  system.c  top.c
src/screens/: clock.c  control_center.c  dial.c  home.c  keyboard.c  message.c  notification.c  settings.c  system_status.c
src/styles/: curve.c  curved_lines.c  style.c
src/task/: task_exec.c
src/ui/: color_palette_256.c  screens.c  ui_controller.c
src/ui/components/: clock.c  home_indicator.c  keyboard.c  notification.c  plat.c  status_bar.c  task_bar.c
src/ui/comps/: keyboard.c  top_bar.c
src/ui/fonts/: terminal_icons_32.c  terminal_icons_48.c
src/ui/layers/: active.c  bottom.c  system.c  top.c
src/ui/pages/: common.c  settings.c
src/ui/screens/: control_center.c  dial.c  home.c  message.c  settings.c  system_status.c
src/ui/styles/: styles.c
src/ui/windows/: settings.c  win_utils.c
src/ux/: audio.c  haptic.c
utils/: ui_utils.c
(+15 files in other folders)
